2011-02-25	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/sleep_noposix.c: Remove.
	* libcsupport/Makefile.am: Reflect changes above.
	* posix/src/sleep.c, posix/src/usleep.c: Remove.
	* posix/Makefile.am: Reflect changes above.
	* configure.ac: Error out if libc doesn't provide sleep, usleep.

2011-02-25	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/canonical-target-name.m4:
	Stop pretending no_cpu* was buildable.
	Derive RTEMS_CPU from "$host_cpu".
	Error out if "$host" doesn't match "*-*-rtems*".

2011-02-25	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/check-networking.m4, aclocal/check-posix.m4:
	Rebase check on "$host".

2011-02-25	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/creat.c: Remove.
	* libcsupport/Makefile.am: Reflect changes above.
	* configure.ac: Error out if libc doesn't provide creat.

2011-02-25	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/opendir.c, libcsupport/src/closedir.c,
	libcsupport/src/readdir.c, libcsupport/src/rewinddir.c,
	libcsupport/src/scandir.c, libcsupport/src/seekdir.c,
	libcsupport/src/telldir.c: Remove.
	* libcsupport/Makefile.am: Reflect changes above.
	* configure.ac: Error out if libc doesn't provide
	opendir, closedir, readdir, rewinddir, scandir, seekdir,
	telldir.

2011-02-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/include/sys/statvfs.h: Remove include <sys/cdefs.h>
	(unused). Add C++ guards. Declare functions extern.

2011-02-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/include/rtems/posix/mqueue.h,
	posix/include/rtems/posix/timer.h: Add missing includes.

2011-02-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/netinet/ip_icmp.c, libnetworking/netinet/ip_icmp.h:
	Misc. changes from FreeBSD.
	* libnetworking/netinet/tcp_var.h: Include <netinet/tcp_timer.h>.

2011-02-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/netinet/in_systm.h, 
	libnetworking/netinet/tcp_debug.c,